--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -1,6 +1,13 @@
 [metadata]
-name = flask_responses
-version = 0.1.1
+name = Flask-Responses
+version = 0.1.2
+author = 'Ryan Rickgauer'
+author_email = 'rrickgauer1@gmail.com'
 
 [options]
-packages = pymysql
+package_dir=
+    =flask_responses
+packages=find:
+
+[options.packages.find]
+where=src
