--- a/setup.cfg
+++ b/setup.cfg
@@ -9,9 +9,8 @@ project_urls =
     Issue Tracker = https://github.com/rrickgauer/Flask-Responses/issues
 
 [options]
-package_dir=
-    =flask_responses
-packages=find:
+packages = find:
+package_dir = = src
 install_requires =
     Flask==2.0.1
 
